--- a/package.json
+++ b/package.json
@@ -17,45 +17,45 @@
   "author": "Alex Latunov",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "nodemon": "^1.17.3",
-    "react-hot-loader": "^1.3.1",
-    "webpack": "^3.2.0",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "nodemon": "^2.0.14",
+    "react-hot-loader": "^4.13.0",
+    "webpack": "^5.61.0",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-hot-middleware": "^2.25.1"
   },
   "dependencies": {
-    "axios": "^0.16.2",
-    "bcrypt": "^1.0.2",
-    "body-parser": "^1.17.2",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.4",
-    "express": "^4.15.3",
-    "jquery": "^3.3.1",
-    "jsonwebtoken": "^7.4.1",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.22.1",
-    "mongoose": "^4.11.3",
-    "popper.js": "^1.14.3",
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.1",
-    "react-datetime": "^2.8.10",
-    "react-dnd": "^2.4.0",
-    "react-dnd-html5-backend": "^2.6.0",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "shortid": "^2.2.8",
-    "style-loader": "^0.18.2",
-    "validator": "^8.0.0"
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "classnames": "^2.3.1",
+    "css-loader": "^6.5.0",
+    "express": "^4.17.1",
+    "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.12",
+    "popper.js": "^1.16.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.1",
+    "react-datetime": "^3.1.1",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.",
+    "redux-thunk": "^2.4.0",
+    "shortid": "^2.2.16",
+    "style-loader": "^3.3.1",
+    "validator": "^13.7.0"
   },
   "engines": {
     "node": "6.10.1"
