--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "redux": "^4.",
+    "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "shortid": "^2.2.16",
     "style-loader": "^3.3.1",
