--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "node-gyp": "^8.3.0",
     "nodemon": "^1.17.3",
     "react-hot-loader": "^1.3.1",
     "webpack": "^3.2.0",
