--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "ag-grid-angular": "^22.1.1",
     "axios": "^0.16.2",
-    "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.4",
