--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --watch server --exec babel-node -- server/dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean-win": "del build /s /q && mkdir build",
-    "clean": "rm -r build && mkdir build",
+    "clean": "rm -rf build && mkdir build",
     "build-server": "babel -d ./build ./server",
     "build": "npm run clean && npm run build-server && npm run build-client",
     "start-s": "node --debug ./build/index.js",
